# gpt-cli

./: Cargo.toml  LICENSE.mit  Makefile  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: general.yml
gpt_cli/: all.html  enum.Commands.html  enum.UserActions.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
gpt_cli/chat_manager/: constant.FIELDS.html  enum.__Field.html  index.html  sidebar-items.js  struct.AssistantMetadata.html  struct.ChatHistory.html  struct.ModelMetadata.html  struct.__FieldVisitor.html  struct.__Visitor.html
gpt_cli/cli_history/: index.html  sidebar-items.js  struct.InMemoryHistory.html
gpt_cli/configuration/: constant.FIELDS.html  constant.GPT_CLI_CONFIG_FILE_EXTENSION.html  constant.GPT_CLI_CONFIG_FILE_NAME.html  constant.OPEN_AI_API_KEY_WEB_URL.html  constant.PROJECT_APPLICATION_NAME.html  constant.PROJECT_ORGANIZATION.html  constant.PROJECT_QUALIFIER.html  enum.__Field.html  fn.get_config_file_path.html  fn.get_project_dirs.html  index.html  sidebar-items.js  struct.AppConfig.html  struct.__FieldVisitor.html  struct.__Visitor.html
gpt_cli/utils/: constant.CHAT_GPT_KNOWLEDGE_CUTOFF.html  constant.DEFAULT_SYSTEM_INSTRUCTIONS_KEY.html  constant.GPT_3_5_MODEL_NAME.html  constant.GPT_3_5_MODEL_TOKEN_LIMIT.html  constant.GPT_4_32K_MODEL_NAME.html  constant.GPT_4_32K_MODEL_TOKEN_LIMIT.html  constant.GPT_4_8K_MODEL_NAME.html  constant.GPT_4_8K_MODEL_TOKEN_LIMIT.html  constant.QUESTION_MARK_EMOJI.html  (+9 more)
src/: chat_manager.rs  cli_history.rs  configuration.rs  main.rs  utils.rs
(+31 files in other folders)
